# recipepricer-1780277150

./: componente_resolucao.md  context_summary.md  development_plan.md  pyproject.toml  queue.txt  requirements.txt  research_output.md  setup.py
.github/workflows/: ci-cd.yml  ci.yml
app/: __init__.py  main.py  models.py
app/services/: pricing_service.py
hermes-workflow-template/: README.md
hermes-workflow-template/scripts/: validate_research_depth.py
hermes-workflow-template/templates/: audit_report.md  componente_resolucao.md  context_summary.md  development_plan.md  research_output.md
routers/: recipe_router.py
tests/: __init__.py  test_business_requirements.py  test_ingredient_model.py
